Feature-added logo class to "tweeter", added new-tweet class with semi-bolded wording and icon

--- a/public/index.html
+++ b/public/index.html
@@ -27,13 +27,16 @@
   </head>
 
   <body>
-    <!-- Top nav bar (fixed) -->
+<!-- Navigation Bar -->
     <nav>
-      <span>tweeter</span>
+      <span class="logo">tweeter</span>
+
+      <div class="new-tweet"> 
+        <span><b>Write</b> a new tweet</span>
+        <i class="fas fa-angle-double-down"></i>
+      </div>
     </nav>
 
-    <!-- New tweet section -->
-    <div class="new-tweet"> Write a new tweet <i class="fas fa-angle-double-down"></i></div>
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
