--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,9 @@
       </div>
       <br>
       <div>
-        <h2>Your Name</h2>
+        <h2>Rhaelyn Lashmar</h2>
       </div>
     </header>
-
 
     <!-- Page-specific (main) content here -->
     <main class="container"></main>
