Temporary- added test examples for visuals

--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,10 @@
     </header>
 
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container">
+      <h3>What are you humming about?</h3>
+      <h4>Tweet, Tweet</h4>
+      <p>Nothing hits quite like Cool Ranch Doritos</p>
+    </main>
   </body>
 </html>
