--- a/public/index.html
+++ b/public/index.html
@@ -50,9 +50,17 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-      <h3>What are you humming about?</h3>
-      <h4>Tweet, Tweet</h4>
-      <p>Nothing hits quite like Cool Ranch Doritos</p>
+      <section class="new-tweet">
+        <h2>Compose Tweet</h2>
+        <form action="/tweets/" method="POST">
+          <label for="tweet-text">What are you humming about?</label>
+          <textarea name="text" id="tweet-text"></textarea>
+          <div>
+            <button type="submit">Tweet</button>
+            <output name="counter" class="counter" for="tweet-text">140</output>
+          </div>
+        </form>
+      </section>
     </main>
   </body>
 </html>
