Added script links to composer-char-counter.js

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
 
     <!-- Apply JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
   <body>
@@ -62,7 +63,7 @@
             cols="50"
           ></textarea>
           <div class="tweet-footer">
-            <button type="submit">Tweet</button>
+            <button type="submit" >Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
