--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />  
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -50,11 +51,10 @@
       </div>
     </header>
 
-    <!-- Page-specific (main) content here -->
+    <!-- main content here -->
     <main class="container">
       <section class="new-tweet">
         <form action="/tweets/" method="POST">
-          <!-- <label for="tweet-text">What are you humming about?</label> -->
           <textarea 
             name="text" 
             id="tweet-text" 
@@ -68,6 +68,36 @@
           </div>
         </form>
       </section>
+
+      <!-- Tweets Container Content -->
+      <section class="tweets-container">
+        <article class="tweet">
+          <header>
+            <div class="tweet-avatar">
+              <img src="/images/lg-fm-av.png" alt="Avatar1">
+            </div>
+            <div class="tweet-user-info">
+              <h3>Holly Harper</h3>
+              <p>@merrygoround365</p>
+            </div>
+          </header>
+          <div class="tweet-content">
+            <p>Ramen is BY FAR the best kind of soup!</p>
+          </div>
+          <footer>
+            <div class="tweet-timestamp">
+              <p>45 minutes ago</p>
+            </div>
+            <div class="tweet-actions">
+              <i class="fa fa-flag"></i>
+              <i class="fa fa-retweet"></i>
+              <i class="fa fa-heart"></i>
+            </div>
+          </footer>
+        </article>
+      </section>
+
+      
     </main>
   </body>
 </html>
