--- a/public/index.html
+++ b/public/index.html
@@ -16,11 +16,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <!-- Apply CSS -->
-    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
     <link rel="stylesheet" href="/styles/header.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
     <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
-    <link rel="stylesheet" href="/styles/tweets.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/tweet.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -41,9 +41,9 @@
       </div>
     </nav>
 
-    <header>
+    <header class="profile-header">
       <div>
-        <img src="/images/profile-hex.png">
+        <img class="profile-pic" src="/images/profile-hex.png">
       </div>
       <br>
       <div>
@@ -72,14 +72,12 @@
       <!-- Tweets Container Content -->
       <section class="tweets-container">
         <article class="tweet">
-          <header>
+          <header class="tweet-header">
             <div class="tweet-avatar">
-              <img src="/images/lg-fm-av.png" alt="Avatar1">
+              <img class="avatar1" src="/images/lg-fm-av.png">
+              <h4>Holly Harper</h4>
             </div>
-            <div class="tweet-user-info">
-              <h3>Holly Harper</h3>
-              <p>@merrygoround365</p>
-            </div>
+            <p class="user-handle">@merrygoround365</p>
           </header>
           <div class="tweet-content">
             <p>Ramen is BY FAR the best kind of soup!</p>
@@ -97,7 +95,7 @@
         </article>
       </section>
 
-      
+
     </main>
   </body>
 </html>
