Altered- changed div (class tweet-content) to section for grouping purposes

--- a/public/index.html
+++ b/public/index.html
@@ -79,9 +79,9 @@
             </div>
             <p class="user-handle">@merrygoround365</p>
           </header>
-          <div class="tweet-content">
+          <section class="tweet-content">
             <p>Ramen is BY FAR the best kind of soup!</p>
-          </div>
+          </section>
           <footer>
             <div class="tweet-timestamp">
               <p>45 minutes ago</p>
