Altered- changed div (class tweet-avatar) to span to meet project requirements

--- a/public/index.html
+++ b/public/index.html
@@ -73,10 +73,10 @@
       <section class="tweets-container">
         <article class="tweet">
           <header class="tweet-header">
-            <div class="tweet-avatar">
+            <span class="tweet-avatar">
               <img class="avatar1" src="/images/lg-fm-av.png">
               <h4>Holly Harper</h4>
-            </div>
+            </span>
             <p class="user-handle">@merrygoround365</p>
           </header>
           <section class="tweet-content">
