Feature- added 2 more tweets for content clarity, added spacing for organization and changed profile name... felt weird using mine

--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
       </div>
       <br>
       <div>
-        <h2>Rhaelyn Lashmar</h2>
+        <h2>Deliliah Winters</h2>
       </div>
     </header>
 
@@ -71,6 +71,7 @@
 
       <!-- Tweets Container Content -->
       <section class="tweets-container">
+
         <article class="tweet">
           <header class="tweet-header">
             <span class="tweet-avatar">
@@ -93,8 +94,54 @@
             </div>
           </footer>
         </article>
-      </section>
 
+        <article class="tweet">
+          <header class="tweet-header">
+            <span class="tweet-avatar">
+              <img class="avatar1" src="/images/tie-m-av.png">
+              <h4>Derek Duffy</h4>
+            </span>
+            <p class="user-handle">@dazed&confused</p>
+          </header>
+          <section class="tweet-content">
+            <p>Sunrise? or Sunset? Which has the better colors?</p>
+          </section>
+          <footer>
+            <div class="tweet-timestamp">
+              <p>2 days ago</p>
+            </div>
+            <div class="tweet-actions">
+              <i class="fa fa-flag"></i>
+              <i class="fa fa-retweet"></i>
+              <i class="fa fa-heart"></i>
+            </div>
+          </footer>
+        </article>
+
+        <article class="tweet">
+          <header class="tweet-header">
+            <span class="tweet-avatar">
+              <img class="avatar1" src="/images/lg-fm-av.png">
+              <h4>Renee Rouleaux</h4>
+            </span>
+            <p class="user-handle">@rrouleaux</p>
+          </header>
+          <section class="tweet-content">
+            <p>You are free to sever the chains of fate that bind you</p>
+          </section>
+          <footer>
+            <div class="tweet-timestamp">
+              <p>1 week ago</p>
+            </div>
+            <div class="tweet-actions">
+              <i class="fa fa-flag"></i>
+              <i class="fa fa-retweet"></i>
+              <i class="fa fa-heart"></i>
+            </div>
+          </footer>
+        </article>
+        
+      </section>
 
     </main>
   </body>
