Altered- changed location of script links to the end of page. Wasn't working properly at the beginning. Needed page to be rendered

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
     <!-- Apply JS -->
-    <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
 
@@ -70,9 +69,9 @@
       </section>
 
       <!-- Tweets Container Content -->
-      <section class="tweets-container">
+      <section id="tweets-container" class="tweets-container">
 
-        <article class="tweet">
+        <!-- <article class="tweet">
           <header class="tweet-header">
             <span class="tweet-avatar">
               <img class="avatar1" src="/images/lg-fm-av.png">
@@ -139,10 +138,13 @@
               <i class="fa fa-heart"></i>
             </div>
           </footer>
-        </article>
+        </article> -->
         
       </section>
 
     </main>
   </body>
+  
+  <script type="text/javascript" src="/scripts/client.js"></script>
+
 </html>
