Altered- gave form "new-tweet-form" id for clarity

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,7 @@
     <!-- main content here -->
     <main class="container">
       <section class="new-tweet">
-        <form action="/tweets/" method="POST">
+        <form id="new-tweet-form" action="/tweets/" method="POST">
           <textarea 
             name="text" 
             id="tweet-text" 
@@ -144,7 +144,7 @@
 
     </main>
   </body>
-  
+
   <script type="text/javascript" src="/scripts/client.js"></script>
 
 </html>
