Feature-added "error-message" div in main container with no immediate display

--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,7 @@
             rows="1" 
             cols="50"
           ></textarea>
+          <div id="error-message" class="error-message" style="display: none;"></div>
           <div class="tweet-footer">
             <button type="submit" >Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
