Altered- added bold font to h2 name

--- a/public/index.html
+++ b/public/index.html
@@ -47,9 +47,8 @@
       <div>
         <img class="profile-pic" src="/images/profile-hex.png">
       </div>
-      <br>
       <div>
-        <h2>Deliliah Winters</h2>
+        <h2 class="user-name"><b>Deliliah</b> Winters</h2>
       </div>
     </header>
 
