Clean Up- removed hard coded practice tweets

--- a/public/index.html
+++ b/public/index.html
@@ -72,78 +72,7 @@
       </section>
 
       <!-- Tweets Container Content -->
-      <section id="tweets-container" class="tweets-container">
-
-        <!-- <article class="tweet">
-          <header class="tweet-header">
-            <span class="tweet-avatar">
-              <img class="avatar1" src="/images/lg-fm-av.png">
-              <h4>Holly Harper</h4>
-            </span>
-            <p class="user-handle">@merrygoround365</p>
-          </header>
-          <section class="tweet-content">
-            <p>Ramen is BY FAR the best kind of soup!</p>
-          </section>
-          <footer>
-            <div class="tweet-timestamp">
-              <p>45 minutes ago</p>
-            </div>
-            <div class="tweet-actions">
-              <i class="fa fa-flag"></i>
-              <i class="fa fa-retweet"></i>
-              <i class="fa fa-heart"></i>
-            </div>
-          </footer>
-        </article>
-
-        <article class="tweet">
-          <header class="tweet-header">
-            <span class="tweet-avatar">
-              <img class="avatar1" src="/images/tie-m-av.png">
-              <h4>Derek Duffy</h4>
-            </span>
-            <p class="user-handle">@dazed&confused</p>
-          </header>
-          <section class="tweet-content">
-            <p>Sunrise? or Sunset? Which has the better colors?</p>
-          </section>
-          <footer>
-            <div class="tweet-timestamp">
-              <p>2 days ago</p>
-            </div>
-            <div class="tweet-actions">
-              <i class="fa fa-flag"></i>
-              <i class="fa fa-retweet"></i>
-              <i class="fa fa-heart"></i>
-            </div>
-          </footer>
-        </article>
-
-        <article class="tweet">
-          <header class="tweet-header">
-            <span class="tweet-avatar">
-              <img class="avatar1" src="/images/lg-fm-av.png">
-              <h4>Renee Rouleaux</h4>
-            </span>
-            <p class="user-handle">@rrouleaux</p>
-          </header>
-          <section class="tweet-content">
-            <p>You are free to sever the chains of fate that bind you</p>
-          </section>
-          <footer>
-            <div class="tweet-timestamp">
-              <p>1 week ago</p>
-            </div>
-            <div class="tweet-actions">
-              <i class="fa fa-flag"></i>
-              <i class="fa fa-retweet"></i>
-              <i class="fa fa-heart"></i>
-            </div>
-          </footer>
-        </article> -->
-        
-      </section>
+      <section id="tweets-container" class="tweets-container"></section>
 
     </main>
   </body>
